Correct project name from 'bbbsdeb/pkg-bbbs' to 'ftnapps/bbbs-installer'.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet alternative" type="text/css" href="/print.css" media="screen" title="Print Preview" />
     <link rel="stylesheet" type="text/css" href="/print.css" media="print" />
 
-    <title>bbbsdeb.github.com/pkg-bbbs Index</title>
+    <title>ftnapps.github.com/bbbs-installer Index</title>
   </head>
 
   <body>
@@ -30,9 +30,9 @@
       </div>
 
       <div class="midHeader">
-        <h1 class="headerTitle" lang="en">Pkg-BBBS</h1> 
-        <div class="headerSubTitle" title="bbbsdeb at GitHub">
-             BBBS related Debian packaging.
+        <h1 class="headerTitle" lang="en">bbbs-installer</h1> 
+        <div class="headerSubTitle" title="ftnapps at GitHub">
+             BBBS Application installer for Debian systems.
         </div>
 
         <br class="doNotDisplay doNotPrint" />
@@ -50,7 +50,7 @@
       <div class="subHeader">
         <span class="doNotDisplay">Navigation:</span>
         <a href="/index.html">Home</a> |
-        <a href="/pkg-bbbs/index.html">pkg-bbbs</a> |
+        <a href="/bbbs-installer/index.html">bbbs-installer</a> |
         <a href="/mrtgbbbs/index.html">mrtgbbbs</a> |
         <a href="/bconfhtm/index.html">bconfhtm</a>
       </div>
@@ -68,11 +68,11 @@
             <a href="http://www.bbbs.net/">home page</a> for more details regarding the
             application itself.</p>
 
-        <p>The installer package <a href="https://github.com/bbbsdeb/pkg-bbbs/commits/bbbs-installer">bbbs-installer</a>
+        <p>The installer package <a href="https://github.com/ftnapps/bbbs-installer/commits/bbbs-installer">bbbs-installer</a>
              downloads the archive from the www.bbbs.net web site, or uses the one in the tmp directory
              if already present, then installs the application to the system.</p>
 
-        <p>The package <a href="https://github.com/bbbsdeb/pkg-bbbs/commits/bbbs-equivs">bbbs-equivs</a>
+        <p>The package <a href="https://github.com/ftnapps/bbbs-installer/commits/bbbs-equivs">bbbs-equivs</a>
              is for when you have manually installed BBBS and would like to make it like a standard Debian
              installed package.</p>
 
@@ -83,11 +83,11 @@
 
           <ul type="DISC">Quicklinks
 
-            <li><a href="http://github.com/bbbsdeb/pkg-bbbs">bbbsdeb/pkg-bbbs</a></li>
-            <li><a href="https://github.com/bbbsdeb/pkg-bbbs/issues">pkg-bbbs issues</a></li>
-            <li><a href="https://github.com/bbbsdeb/pkg-bbbs/commits/master">pkg-bbbs commits</a></li>
-            <li><a href="https://github.com/bbbsdeb/pkg-bbbs/commits/bbbs-installer">bbbs-installer</a> development branch</li>
-            <li><a href="https://github.com/bbbsdeb/pkg-bbbs/commits/bbbs-equivs">bbbs-equivs</a> development branch</li>
+            <li><a href="http://github.com/ftnapps/bbbs-installer">ftnapps/bbbs-installer</a></li>
+            <li><a href="https://github.com/ftnapps/bbbs-installer/issues">bbbs-installer issues</a></li>
+            <li><a href="https://github.com/ftnapps/bbbs-installer/commits/master">bbbs-installer commits</a></li>
+            <li><a href="https://github.com/ftnapps/bbbs-installer/commits/bbbs-installer">bbbs-installer</a> development branch</li>
+            <li><a href="https://github.com/ftnapps/bbbs-installer/commits/bbbs-equivs">bbbs-equivs</a> development branch</li>
 
           </ul>
 
